--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "/dev/proc/sys/net/unix"
+title                    : "/proc/sys/net/unix"
 title_separator          : "-"
 name                     : "Laurent G"
 description              : "An amazing website."
