--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "/proc/sys/net/unix"
 title_separator          : "-"
 name                     : "Laurent G"
 description              : "An amazing website."
-url                      : "https://g2g.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://guesde.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "g2g/g2g.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
